:hammer: Update Scripts
Remove The Lint Script From Scripts

--- a/package.json
+++ b/package.json
@@ -35,15 +35,14 @@
   "repository": "github:krishdevdb/reseter.css",
   "scripts": {
     "yarn:init": "npm install yarn -g --save-dev",
-    "sass:build": "yarn sass:compile && yarn pcss && yarn lint && yarn minify",
+    "sass:build": "yarn sass:compile && yarn pcss && yarn minify",
     "sass:compile": "sass src/sass/reseter.sass css/reseter.css --no-source-map",
-    "scss:build": "yarn scss:compile && yarn pcss && yarn lint && yarn minify",
+    "scss:build": "yarn scss:compile && yarn pcss && yarn minify",
     "scss:compile": "sass src/scss/reseter.scss css/reseter.css --no-source-map",
-    "less:build": "yarn less:compile && yarn pcss && yarn lint && yarn minify",
+    "less:build": "yarn less:compile && yarn pcss && yarn minify",
     "less:compile": "lessc src/less/reseter.less css/reseter.css",
-    "stylus:build": "yarn stylus:compile && yarn pcss && yarn lint && yarn minify",
+    "stylus:build": "yarn stylus:compile && yarn pcss && yarn minify",
     "stylus:compile": "stylus src/stylus/reseter.styl -o css/reseter.css",
-    "lint": "stylelint css/reseter.css --fix",
     "pcss": "postcss css/reseter.css -r --no-map -u autoprefixer",
     "minify": "cleancss css/reseter.css -o css/reseter.min.css && bundlewatch --config .bundlewatch.config.json"
   },
