--- a/package.json
+++ b/package.json
@@ -34,17 +34,72 @@
   },
   "repository": "github:krishdevdb/reseter.css",
   "scripts": {
-    "yarn:init": "npm install yarn -g --save-dev",
-    "sass:build": "yarn sass:compile && yarn pcss && yarn minify",
+    "prepare": "yarn sass:build",
+    "css:build": "yarn css:prefix && yarn css:minify && yarn css:compress",
+    "css:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "css:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "css:compress": "bundlewatch --config .bundlewatch.config.json",
+    "sass:build": "yarn sass:compile && yarn sass:prefix && yarn sass:minify && yarn sass:compress",
     "sass:compile": "sass src/sass/reseter.sass css/reseter.css --no-source-map",
-    "scss:build": "yarn scss:compile && yarn pcss && yarn minify",
-    "scss:compile": "sass src/scss/reseter.scss css/reseter.css --no-source-map",
-    "less:build": "yarn less:compile && yarn pcss && yarn minify",
+    "sass:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "sass:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "sass:compress": "bundlewatch --config .bundlewatch.config.json",
+    "scss:build": "yarn scss:compile && yarn scss:prefix && yarn scss:minify && yarn scss:compress",
+    "scss:lint": "stylelint src/scss/*.scss --syntax scss",
+    "scss:lint:fix": "stylelint src/scss/*.scss --fix --syntax scss",
+    "scss:compile": "sass src/scss/reseter.sass css/reseter.css --no-source-map",
+    "scss:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "scss:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "scss:compress": "bundlewatch --config .bundlewatch.config.json",
+    "less:build": "yarn less:compile && yarn less:prefix && yarn less:minify && yarn less:compress",
+    "less:lint": "stylelint src/less/*.less --syntax less",
+    "less:lint:fix": "stylelint src/less/*.less --fix --syntax less",
     "less:compile": "lessc src/less/reseter.less css/reseter.css",
-    "stylus:build": "yarn stylus:compile && yarn pcss && yarn minify",
+    "less:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "less:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "less:compress": "bundlewatch --config .bundlewatch.config.json",
+    "stylus:build": "yarn stylus:compile && yarn stylus:prefix && yarn stylus:minify && yarn sass:compress",
     "stylus:compile": "stylus src/stylus/reseter.styl -o css/reseter.css",
-    "pcss": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "minify": "cleancss css/reseter.css -o css/reseter.min.css && bundlewatch --config .bundlewatch.config.json"
+    "stylus:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "stylus:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "stylus:compress": "bundlewatch --config .bundlewatch.config.json",
+    "npm:src:build": "npm run npm:src:compile, && npm run npm:src:prefix && npm run npm:src:minify && npm run npm:src:compress",
+    "npm:src:compile": "npm run npm:sass:compile, && npm run npm:scss:compile && npm run npm:less:compile && npm run npm:stylus:compile",
+    "npm:src:prefix": "npm run npm:sass:prefix, && npm run npm:scss:prefix && npm run npm:less:prefix && npm run npm:stylus:prefix",
+    "npm:src:minify": "npm run npm:sass:minify, && npm run npm:scss:minify && npm run npm:less:minify && npm run npm:stylus:minify",
+    "npm:src:compress": "npm run npm:sass:compress, && npm run npm:scss:compress && npm run npm:less:compress && npm run npm:stylus:compress",
+    "npm:dist:build": "npm run npm:css:prefix && npm run npm:css:minify && npm run npm:css:compress",
+    "npm:dist:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "npm:dist:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "npm:dist:compress": "bundlewatch --config .bundlewatch.config.json",
+    "npm:css:build": "npm run npm:css:prefix && npm run npm:css:minify && npm run npm:css:compress",
+    "npm:css:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "npm:css:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "npm:css:compress": "bundlewatch --config .bundlewatch.config.json",
+    "npm:sass:build": "npm run npm:sass:compile && npm run npm:sass:prefix && npm run npm:sass:minify && npm run npm:sass:compress",
+    "npm:sass:compile": "sass src/sass/reseter.sass css/reseter.css --no-source-map",
+    "npm:sass:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "npm:sass:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "npm:sass:compress": "bundlewatch --config .bundlewatch.config.json",
+    "npm:scss:build": "npm run npm:scss:compile && npm run npm:scss:prefix && npm run npm:scss:minify && npm run npm:scss:compress",
+    "npm:scss:lint": "stylelint src/scss/*.scss --syntax scss",
+    "npm:scss:lint:fix": "stylelint src/scss/*.scss --fix --syntax scss",
+    "npm:scss:compile": "sass src/scss/reseter.sass css/reseter.css --no-source-map",
+    "npm:scss:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "npm:scss:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "npm:scss:compress": "bundlewatch --config .bundlewatch.config.json",
+    "npm:less:build": "npm run npm:less:compile && npm run npm:less:prefix && npm run npm:less:minify && npm run npm:less:compress",
+    "npm:less:lint": "stylelint src/less/*.less --syntax less",
+    "npm:less:lint:fix": "stylelint src/less/*.less --fix --syntax less",
+    "npm:less:compile": "lessc src/less/reseter.less css/reseter.css",
+    "npm:less:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "npm:less:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "npm:less:compress": "bundlewatch --config .bundlewatch.config.json",
+    "npm:stylus:build": "npm run npm:stylus:compile && npm run npm:stylus:prefix && npm run npm:stylus:minify && npm run npm:sass:compress",
+    "npm:stylus:compile": "stylus src/stylus/reseter.styl -o css/reseter.css",
+    "npm:stylus:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "npm:stylus:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "npm:stylus:compress": "bundlewatch --config .bundlewatch.config.json"
   },
   "config": {},
   "dependencies": {},
