:package: :heavy_minus_sign: Remove Dev Dependencies
:package: :heavy_minus_sign: Remove Dev Dependencies. For Stylelint

--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "repository": "github:krishdevdb/reseter.css",
   "scripts": {
-    "prepare": "yarn sass:build",
     "css:build": "yarn css:prefix && yarn css:minify && yarn css:compress",
     "css:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
     "css:minify": "cleancss css/reseter.css -o css/reseter.min.css",
@@ -45,15 +44,11 @@
     "sass:minify": "cleancss css/reseter.css -o css/reseter.min.css",
     "sass:compress": "bundlewatch --config .bundlewatch.config.json",
     "scss:build": "yarn scss:compile && yarn scss:prefix && yarn scss:minify && yarn scss:compress",
-    "scss:lint": "stylelint src/scss/*.scss --syntax scss",
-    "scss:lint:fix": "stylelint src/scss/*.scss --fix --syntax scss",
     "scss:compile": "sass src/scss/reseter.sass css/reseter.css --no-source-map",
     "scss:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
     "scss:minify": "cleancss css/reseter.css -o css/reseter.min.css",
     "scss:compress": "bundlewatch --config .bundlewatch.config.json",
     "less:build": "yarn less:compile && yarn less:prefix && yarn less:minify && yarn less:compress",
-    "less:lint": "stylelint src/less/*.less --syntax less",
-    "less:lint:fix": "stylelint src/less/*.less --fix --syntax less",
     "less:compile": "lessc src/less/reseter.less css/reseter.css",
     "less:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
     "less:minify": "cleancss css/reseter.css -o css/reseter.min.css",
@@ -82,15 +77,11 @@
     "npm:sass:minify": "cleancss css/reseter.css -o css/reseter.min.css",
     "npm:sass:compress": "bundlewatch --config .bundlewatch.config.json",
     "npm:scss:build": "npm run npm:scss:compile && npm run npm:scss:prefix && npm run npm:scss:minify && npm run npm:scss:compress",
-    "npm:scss:lint": "stylelint src/scss/*.scss --syntax scss",
-    "npm:scss:lint:fix": "stylelint src/scss/*.scss --fix --syntax scss",
     "npm:scss:compile": "sass src/scss/reseter.sass css/reseter.css --no-source-map",
     "npm:scss:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
     "npm:scss:minify": "cleancss css/reseter.css -o css/reseter.min.css",
     "npm:scss:compress": "bundlewatch --config .bundlewatch.config.json",
     "npm:less:build": "npm run npm:less:compile && npm run npm:less:prefix && npm run npm:less:minify && npm run npm:less:compress",
-    "npm:less:lint": "stylelint src/less/*.less --syntax less",
-    "npm:less:lint:fix": "stylelint src/less/*.less --fix --syntax less",
     "npm:less:compile": "lessc src/less/reseter.less css/reseter.css",
     "npm:less:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
     "npm:less:minify": "cleancss css/reseter.css -o css/reseter.min.css",
@@ -111,10 +102,7 @@
     "postcss": "8.2.4",
     "postcss-cli": "8.3.1",
     "sass": "1.32.5",
-    "stylelint": "13.9.0",
-    "stylelint-config-standard": "20.0.0",
-    "stylus": "0.54.8",
-    "yarn": "1.22.10"
+    "stylus": "0.54.8"
   },
   "peerDependencies": {},
   "bundledDependencies": [],
