--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: krishdevdb
+# github: krishdevdb
 patreon: krishdevdb
 open_collective: resetercss
 ko_fi: krishdevdb
