--- a/.github/config.yml
+++ b/.github/config.yml
@@ -1,2 +1,11 @@
-- name: GoodReadMe
-  uses: GoodReadMe/GoodReadMeAction@1.2
+blank_issues_enabled: false
+contact_links:
+  - name: Community Discussions
+    url: https://github.com/krishdevdb/reseter.css/discussions
+    about: Reseter.css Github Community Resides Here
+  - name: Discord Server
+    url: https://discord.gg/xqh38kb6sv
+    about: Are You A Discord Person, We are too. Join us on discord
+  - name: Twitter
+    url: https://twitter.com/krishdevdb
+    about: Official Twitter Of The Author
