--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "postcss": "8.2.4",
     "postcss-cli": "8.3.1",
     "sass": "1.32.5",
+    "styled-components": "^5.2.1",
     "stylus": "0.54.8"
   },
   "peerDependencies": {},
