--- a/.allcontributorsrc
+++ b/.allcontributorsrc
@@ -1,5 +1,5 @@
 {
-  "files": ["README.md"],
+  "files": ["readme.md"],
   "imageSize": 100,
   "contributorsPerLine": 7,
   "contributorsSortAlphabetically": false,
