--- a/.allcontributorsrc
+++ b/.allcontributorsrc
@@ -1,6 +1,7 @@
 {
-  "files": ["./readme.md],
+  "files": ["./readme.md"],
   "imageSize": 100,
+  "bagdeTemplate": "<a href="#contributors"><img src="https://img.shields.io/badge/All_Contributors-<%= contributors.length %>-orange.svg?style=flat-square" alt=""></a>",
   "contributorsPerLine": 7,
   "contributorsSortAlphabetically": false,
   "skipCi": false,
