--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -6,7 +6,7 @@
   "files": [
     "readme.md"
   ],
-  "bagdeTemplate": "<a href="#contributors"><img src="https://img.shields.io/badge/All_Contributors-<%= contributors.length %>-orange.svg?style=flat-square" alt=""></a>",
+  "bagdeTemplate": "<a href=\"#contributors\"><img src=\"https://img.shields.io/badge/All_Contributors-<%= contributors.length %>-orange.svg?style=flat-square\" alt=\"\"></a>",
   "imageSize": 100,
   "commit": true,
   "commitConvention": "gitmoji",
