:package: :lock:  Update Dependencies

--- a/package.json
+++ b/package.json
@@ -95,15 +95,15 @@
   "config": {},
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "10.2.3",
-    "bundlewatch": "0.3.1",
-    "clean-css-cli": "4.3.0",
-    "less": "4.1.0",
-    "postcss": "8.2.4",
-    "postcss-cli": "8.3.1",
-    "sass": "1.32.5",
+    "autoprefixer": "^10.2.5",
+    "bundlewatch": "^0.3.2",
+    "clean-css-cli": "^5.2.2",
+    "less": "^4.1.1",
+    "postcss": "^8.2.8",
+    "postcss-cli": "^8.3.1",
+    "sass": "^1.32.8",
     "styled-components": "^5.2.1",
-    "stylus": "0.54.8"
+    "stylus": "^0.54.8"
   },
   "peerDependencies": {},
   "bundledDependencies": [],
