--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: node_js
+node_js: node
 os:
   - linux
   - windows
@@ -8,3 +9,6 @@ script:
   - test/scss.sh
   - test/less.sh
   - test/stylus.sh
+branches:
+  only:
+  - master
