--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reseter.css",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "Reset All CSS By Browsers With Reseter.css. And Make Web Look Same Across All Browsers",
   "keywords": [
     "Reset.css",
@@ -126,9 +126,7 @@
   "peerDependencies": {},
   "bundledDependencies": [],
   "optionalDependencies": {},
-  "engines": {
-    "node": "~v15.5.1"
-  },
+  "engines": {},
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/",
