--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -1,1 +1,17 @@
-
+name: "Try Installing The Package On Every Release"
+on:
+  release:
+    types: [published, created]
+jobs:
+  install:
+    name: 'NPM, YARN, PNPM'
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+      with:
+        node-version: "14"
+        -  run: npm install --global yarn pnpm bower
+        -  run: npm install reseter.css
+        -  run: pnpm install reseter.css
+        -  run: yarn add reseter.css
+        -  run: bower install krishdevdb/reseter.css
