:hammer: Fix YML

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -7,7 +7,8 @@ jobs:
     name: 'NPM, YARN, PNPM'
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: 'Install'
+      uses: actions/setup-node@v2
       with:
         node-version: "14"
         -  run: npm install --global yarn pnpm bower
