:see_no_evil: Switch To GitHub Actions From Travis CI
:fire: Switch To GitHub Actions From Travis CI for ease of access

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ node_modules/
 # Ignore Vscode's Settings
 .vscode
 
-# Ignore All Cache
-*-cache/
+# Ignore Test Build Cache
+cache/
+
+# Ignore Build Cache
+sass-cache/
