--- a/.github/workflows/source.yml
+++ b/.github/workflows/source.yml
@@ -9,6 +9,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
+      - run: chmod +x .github/scripts/build/sass.sh
       - run: .github/scripts/build/sass.sh
   scss:
     runs-on: ubuntu-latest
@@ -18,6 +19,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
+      - run: chmod +x .github/scripts/build/scss.sh
       - run: .github/scripts/build/scss.sh
   less:
     runs-on: ubuntu-latest
@@ -27,6 +29,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
+      - run: chmod +x .github/scripts/build/less.sh
       - run: .github/scripts/build/less.sh
   styl:
     runs-on: ubuntu-latest
@@ -36,4 +39,5 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
+      - run: chmod +x .github/scripts/build/styl.sh
       - run: .github/scripts/build/styl.sh
