--- a/.github/workflows/src.yml
+++ b/.github/workflows/src.yml
@@ -5,9 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
       - name: Build Sass Src
         uses: actions/setup-node@v2
-        uses: actions/cache@v2
         with:
           node-version: '14.x'
       - run: chmod +x .github/scripts/build/sass.sh
@@ -16,9 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
       - name: Build Scss Src
         uses: actions/setup-node@v2
-        uses: actions/cache@v2
         with:
           node-version: '14.x'
       - run: chmod +x .github/scripts/build/scss.sh
@@ -27,9 +27,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
       - name: Build Less Src
         uses: actions/setup-node@v2
-        uses: actions/cache@v2
         with:
           node-version: '14.x'
       - run: chmod +x .github/scripts/build/less.sh
@@ -38,9 +38,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
       - name: Build Stylus Src
         uses: actions/setup-node@v2
-        uses: actions/cache@v2
         with:
           node-version: '14.x'
       - run: chmod +x .github/scripts/build/styl.sh
