--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,43 +1,17 @@
 name: Try Building Src
-on: [push, pull_request]
-jobs:
-  sass:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build Sass Src
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14.x'
-      - run: chmod +x .github/build/sass.sh
-      - run: .github/build/sass.sh
-  scss:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build Scss Src
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14.x'
-      - run: chmod +x .github/build/scss.sh
-      - run: .github/build/scss.sh
-  less:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build Less Src
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14.x'
-      - run: chmod +x .github/build/less.sh
-      - run: .github/build/less.sh
-  styl:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build Stylus Src
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14.x'
-      - run: chmod +x .github/build/styl.sh
-      - run: .github/build/styl.sh
+on: push
+runs-on: ubuntu-latest
+steps:
+  - uses: actions/checkout@v2
+  - name: Build Sass Src
+  uses: actions/setup-node@v2
+  with:
+    node-version: '14.x'
+    - run: chmod +x .github/build/sass.sh
+    - run: chmod +x .github/build/scss.sh
+    - run: chmod +x .github/build/less.sh
+    - run: chmod +x .github/build/styl.sh
+    - run: .github/build/sass.sh
+    - run: .github/build/scss.sh
+    - run: .github/build/less.sh
+    - run: .github/build/styl.sh
