feat: new build scripts

--- a/package.json
+++ b/package.json
@@ -50,70 +50,59 @@
   },
   "repository": "github:krishdevdb/reseter.css",
   "scripts": {
-    "css:build": "yarn css:prefix && yarn css:minify && yarn css:compress",
-    "css:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "css:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "css:compress": "bundlewatch --config .bundlewatch.config.json",
-    "sass:build": "yarn sass:compile && yarn sass:prefix && yarn sass:minify && yarn sass:compress",
-    "sass:compile": "sass src/sass/reseter.sass css/reseter.css --no-source-map",
-    "sass:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "sass:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "sass:compress": "bundlewatch --config .bundlewatch.config.json",
-    "scss:build": "yarn scss:compile && yarn scss:prefix && yarn scss:minify && yarn scss:compress",
-    "scss:compile": "sass src/scss/reseter.scss css/reseter.css --no-source-map",
-    "scss:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "scss:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "scss:compress": "bundlewatch --config .bundlewatch.config.json",
-    "less:build": "yarn less:compile && yarn less:prefix && yarn less:minify && yarn less:compress",
-    "less:compile": "lessc src/less/reseter.less css/reseter.css",
-    "less:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "less:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "less:compress": "bundlewatch --config .bundlewatch.config.json",
-    "stylus:build": "yarn stylus:compile && yarn stylus:prefix && yarn stylus:minify && yarn sass:compress",
-    "stylus:compile": "stylus src/stylus/reseter.styl -o css/reseter.css",
-    "stylus:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "stylus:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "stylus:compress": "bundlewatch --config .bundlewatch.config.json",
-    "npm:src:build": "npm run npm:src:compile, && npm run npm:src:prefix && npm run npm:src:minify && npm run npm:src:compress",
-    "npm:src:compile": "npm run npm:sass:compile, && npm run npm:scss:compile && npm run npm:less:compile && npm run npm:stylus:compile",
-    "npm:src:prefix": "npm run npm:sass:prefix, && npm run npm:scss:prefix && npm run npm:less:prefix && npm run npm:stylus:prefix",
-    "npm:src:minify": "npm run npm:sass:minify, && npm run npm:scss:minify && npm run npm:less:minify && npm run npm:stylus:minify",
-    "npm:src:compress": "npm run npm:sass:compress, && npm run npm:scss:compress && npm run npm:less:compress && npm run npm:stylus:compress",
-    "npm:dist:build": "npm run npm:css:prefix && npm run npm:css:minify && npm run npm:css:compress",
-    "npm:dist:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "npm:dist:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "npm:dist:compress": "bundlewatch --config .bundlewatch.config.json",
-    "npm:css:build": "npm run npm:css:prefix && npm run npm:css:minify && npm run npm:css:compress",
-    "npm:css:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "npm:css:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "npm:css:compress": "bundlewatch --config .bundlewatch.config.json",
-    "npm:sass:build": "npm run npm:sass:compile && npm run npm:sass:prefix && npm run npm:sass:minify && npm run npm:sass:compress",
-    "npm:sass:compile": "sass src/sass/reseter.sass css/reseter.css --no-source-map",
-    "npm:sass:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "npm:sass:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "npm:sass:compress": "bundlewatch --config .bundlewatch.config.json",
-    "npm:scss:build": "npm run npm:scss:compile && npm run npm:scss:prefix && npm run npm:scss:minify && npm run npm:scss:compress",
-    "npm:scss:compile": "sass src/scss/reseter.sass css/reseter.css --no-source-map",
-    "npm:scss:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "npm:scss:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "npm:scss:compress": "bundlewatch --config .bundlewatch.config.json",
-    "npm:less:build": "npm run npm:less:compile && npm run npm:less:prefix && npm run npm:less:minify && npm run npm:less:compress",
-    "npm:less:compile": "lessc src/less/reseter.less css/reseter.css",
-    "npm:less:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "npm:less:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "npm:less:compress": "bundlewatch --config .bundlewatch.config.json",
-    "npm:stylus:build": "npm run npm:stylus:compile && npm run npm:stylus:prefix && npm run npm:stylus:minify && npm run npm:sass:compress",
-    "npm:stylus:compile": "stylus src/stylus/reseter.styl -o css/reseter.css",
-    "npm:stylus:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "npm:stylus:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "npm:stylus:compress": "bundlewatch --config .bundlewatch.config.json"
+    "sass": "yarn reseter:sass && yarn optionated:sass",
+    "reseter:sass": "yarn reseter:sass:compile && yarn reseter:sass:prefix && yarn reseter:sass:minify && yarn reseter:sass:compress",
+    "reseter:sass:compile": "sass src/sass/reseter.sass css/reseter.css --no-source-map",
+    "reseter:sass:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "reseter:sass:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "reseter:sass:compress": "bundlewatch --config .bundlewatch.config.js",
+    "optionated:sass": "yarn optionated:sass:compile && yarn optionated:sass:prefix && yarn optionated:sass:minify && yarn optionated:sass:compress",
+    "optionated:sass:compile": "sass src/sass/optionated.sass css/optionated.css --no-source-map",
+    "optionated:sass:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
+    "optionated:sass:minify": "cleancss css/optionated.css -o css/optionated.min.css",
+    "optionated:sass:compress": "bundlewatch --config .bundlewatch.config.js",
+    "scss": "yarn reseter:scss && yarn optionated:scss",
+    "reseter:scss": "yarn reseter:scss:compile && yarn reseter:scss:prefix && yarn reseter:scss:minify && yarn reseter:scss:compress",
+    "reseter:scss:compile": "sass src/scss/reseter.scss css/reseter.css --no-source-map",
+    "reseter:scss:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "reseter:scss:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "reseter:scss:compress": "bundlewatch --config .bundlewatch.config.js",
+    "optionated:scss": "yarn optionated:scss:compile && yarn optionated:scss:prefix && yarn optionated:scss:minify && yarn optionated:scss:compress",
+    "optionated:scss:compile": "sass src/scss/optionated.scss css/optionated.css --no-source-map",
+    "optionated:scss:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
+    "optionated:scss:minify": "cleancss css/optionated.css -o css/optionated.min.css",
+    "optionated:scss:compress": "bundlewatch --config .bundlewatch.config.js",
+    "less": "yarn reseter:less && yarn optionated:less",
+    "reseter:less": "yarn reseter:less:compile && yarn reseter:less:prefix && yarn reseter:less:minify && yarn reseter:less:compress",
+    "reseter:less:compile": "lessc src/less/reseter.less css/reseter.css",
+    "reseter:less:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "reseter:less:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "reseter:less:compress": "bundlewatch --config .bundlewatch.config.js",
+    "optionated:less": "yarn optionated:less:compile && yarn optionated:less:prefix && yarn optionated:less:minify && yarn optionated:less:compress",
+    "optionated:less:compile": "lessc src/less/optionated.less css/optionated.css",
+    "optionated:less:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
+    "optionated:less:minify": "cleancss css/optionated.css -o css/optionated.min.css",
+    "optionated:less:compress": "bundlewatch --config .bundlewatch.config.js",
+    "stylus": "yarn reseter:stylus && yarn optionated:stylus",
+    "reseter:stylus": "yarn reseter:stylus:compile && yarn reseter:stylus:prefix && yarn reseter:stylus:minify && yarn reseter:stylus:compress",
+    "reseter:stylus:compile": "stylus src/stylus/reseter.styl -o css/reseter.css",
+    "reseter:stylus:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "reseter:stylus:minify": "cleancss css/reseter.css -o css/reseter.min.css",
+    "reseter:stylus:compress": "bundlewatch --config .bundlewatch.config.js",
+    "optionated:stylus": "yarn optionated:stylus:compile && yarn optionated:stylus:prefix && yarn optionated:stylus:minify && yarn optionated:stylus:compress",
+    "optionated:stylus:compile": "stylus src/stylus/optionated.styl -o css/optionated.css",
+    "optionated:stylus:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
+    "optionated:stylus:minify": "cleancss css/optionated.css -o css/optionated.min.css",
+    "optionated:stylus:compress": "bundlewatch --config .bundlewatch.config.js"
   },
   "config": {},
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^10.2.5",
+    "brotli-size": "^4.0.0",
     "bundlewatch": "^0.3.2",
     "clean-css-cli": "^5.2.2",
+    "dotenv": "^10.0.0",
     "less": "^4.1.1",
     "postcss": "^8.2.9",
     "postcss-cli": "^8.3.1",
