--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,19 +1,20 @@
-name: Try Building Src
+name: Compile
 on: push
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build Sass Src
+      - name: Setup Nodejs
         uses: actions/setup-node@v2
         with:
           node-version: '14.x'
-      - run: chmod +x .github/build/sass.sh
-      - run: chmod +x .github/build/scss.sh
-      - run: chmod +x .github/build/less.sh
-      - run: chmod +x .github/build/styl.sh
-      - run: .github/build/sass.sh
-      - run: .github/build/scss.sh
-      - run: .github/build/less.sh
-      - run: .github/build/styl.sh
+        run: npm ci
+      - name: Sass
+        run: yarn sass
+      - name: Scss
+        run: yarn scss
+      - name: Less
+        run: yarn less
+      - name: Stylus
+        run: yarn styl
