--- a/package.json
+++ b/package.json
@@ -50,50 +50,43 @@
   },
   "repository": "github:krishdevdb/reseter.css",
   "scripts": {
-    "sass": "yarn reseter:sass && yarn optionated:sass",
-    "reseter:sass": "yarn reseter:sass:compile && yarn reseter:sass:prefix && yarn reseter:sass:minify && yarn reseter:sass:compress",
+    "sass": "yarn reseter:sass && yarn optionated:sass && yarn all:compress",
+    "reseter:sass": "yarn reseter:sass:compile && yarn reseter:sass:prefix && yarn reseter:sass:minify",
     "reseter:sass:compile": "sass src/sass/reseter.sass css/reseter.css --no-source-map",
     "reseter:sass:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
     "reseter:sass:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "reseter:sass:compress": "bundlewatch --config .bundlewatch.config.js",
-    "optionated:sass": "yarn optionated:sass:compile && yarn optionated:sass:prefix && yarn optionated:sass:minify && yarn optionated:sass:compress",
+    "optionated:sass": "yarn optionated:sass:compile && yarn optionated:sass:prefix && yarn optionated:sass:minify",
     "optionated:sass:compile": "sass src/sass/optionated.sass css/optionated.css --no-source-map",
     "optionated:sass:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
     "optionated:sass:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "optionated:sass:compress": "bundlewatch --config .bundlewatch.config.js",
-    "scss": "yarn reseter:scss && yarn optionated:scss",
-    "reseter:scss": "yarn reseter:scss:compile && yarn reseter:scss:prefix && yarn reseter:scss:minify && yarn reseter:scss:compress",
+    "scss": "yarn reseter:scss && yarn optionated:scss && yarn all:compress",
+    "reseter:scss": "yarn reseter:scss:compile && yarn reseter:scss:prefix && yarn reseter:scss:minify",
     "reseter:scss:compile": "sass src/scss/reseter.scss css/reseter.css --no-source-map",
     "reseter:scss:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
     "reseter:scss:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "reseter:scss:compress": "bundlewatch --config .bundlewatch.config.js",
-    "optionated:scss": "yarn optionated:scss:compile && yarn optionated:scss:prefix && yarn optionated:scss:minify && yarn optionated:scss:compress",
+    "optionated:scss": "yarn optionated:scss:compile && yarn optionated:scss:prefix && yarn optionated:scss:minify",
     "optionated:scss:compile": "sass src/scss/optionated.scss css/optionated.css --no-source-map",
     "optionated:scss:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
     "optionated:scss:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "optionated:scss:compress": "bundlewatch --config .bundlewatch.config.js",
-    "less": "yarn reseter:less && yarn optionated:less",
-    "reseter:less": "yarn reseter:less:compile && yarn reseter:less:prefix && yarn reseter:less:minify && yarn reseter:less:compress",
+    "less": "yarn reseter:less && yarn optionated:less && yarn all:compress",
+    "reseter:less": "yarn reseter:less:compile && yarn reseter:less:prefix && yarn reseter:less:minify",
     "reseter:less:compile": "lessc src/less/reseter.less css/reseter.css",
     "reseter:less:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
     "reseter:less:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "reseter:less:compress": "bundlewatch --config .bundlewatch.config.js",
-    "optionated:less": "yarn optionated:less:compile && yarn optionated:less:prefix && yarn optionated:less:minify && yarn optionated:less:compress",
+    "optionated:less": "yarn optionated:less:compile && yarn optionated:less:prefix && yarn optionated:less:minify",
     "optionated:less:compile": "lessc src/less/optionated.less css/optionated.css",
     "optionated:less:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
     "optionated:less:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "optionated:less:compress": "bundlewatch --config .bundlewatch.config.js",
-    "stylus": "yarn reseter:stylus && yarn optionated:stylus",
-    "reseter:stylus": "yarn reseter:stylus:compile && yarn reseter:stylus:prefix && yarn reseter:stylus:minify && yarn reseter:stylus:compress",
+    "stylus": "yarn reseter:stylus && yarn optionated:stylus && yarn all:compress",
+    "reseter:stylus": "yarn reseter:stylus:compile && yarn reseter:stylus:prefix && yarn reseter:stylus:minify",
     "reseter:stylus:compile": "stylus src/stylus/reseter.styl -o css/reseter.css",
     "reseter:stylus:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
     "reseter:stylus:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "reseter:stylus:compress": "bundlewatch --config .bundlewatch.config.js",
-    "optionated:stylus": "yarn optionated:stylus:compile && yarn optionated:stylus:prefix && yarn optionated:stylus:minify && yarn optionated:stylus:compress",
+    "optionated:stylus": "yarn optionated:stylus:compile && yarn optionated:stylus:prefix && yarn optionated:stylus:minify",
     "optionated:stylus:compile": "stylus src/stylus/optionated.styl -o css/optionated.css",
     "optionated:stylus:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
     "optionated:stylus:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "optionated:stylus:compress": "bundlewatch --config .bundlewatch.config.js"
+    "all:compress": "bundlewatch --config .bundlewatch.config.js"
   },
   "config": {},
   "dependencies": {},
