feat: new scripts

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -10,22 +10,16 @@ jobs:
         with:
           node-version: '14.x'
       - name: Dependencies
-        env:
-          BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
         run: yarn
       - name: Sass
-        env:
-          BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
         run: yarn sass
       - name: Scss
-        env:
-          BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
         run: yarn scss
       - name: Less
         run: yarn less
-        env:
-          BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
       - name: Stylus
+        run: yarn stylus
+      - name: Bundle
         env:
           BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
-        run: yarn styl
+        run: yarn all:compress
