--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "repository": "github:krishdevdb/reseter.css",
   "scripts": {
-    "sass": "yarn reseter:sass && yarn optionated:sass && yarn all:compress",
+    "sass": "yarn reseter:sass && yarn optionated:sass",
     "reseter:sass": "yarn reseter:sass:compile && yarn reseter:sass:prefix && yarn reseter:sass:minify",
     "reseter:sass:compile": "sass src/sass/reseter.sass css/reseter.css --no-source-map",
     "reseter:sass:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
@@ -59,7 +59,7 @@
     "optionated:sass:compile": "sass src/sass/optionated.sass css/optionated.css --no-source-map",
     "optionated:sass:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
     "optionated:sass:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "scss": "yarn reseter:scss && yarn optionated:scss && yarn all:compress",
+    "scss": "yarn reseter:scss && yarn optionated:scss",
     "reseter:scss": "yarn reseter:scss:compile && yarn reseter:scss:prefix && yarn reseter:scss:minify",
     "reseter:scss:compile": "sass src/scss/reseter.scss css/reseter.css --no-source-map",
     "reseter:scss:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
@@ -68,7 +68,7 @@
     "optionated:scss:compile": "sass src/scss/optionated.scss css/optionated.css --no-source-map",
     "optionated:scss:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
     "optionated:scss:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "less": "yarn reseter:less && yarn optionated:less && yarn all:compress",
+    "less": "yarn reseter:less && yarn optionated:less",
     "reseter:less": "yarn reseter:less:compile && yarn reseter:less:prefix && yarn reseter:less:minify",
     "reseter:less:compile": "lessc src/less/reseter.less css/reseter.css",
     "reseter:less:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
@@ -77,7 +77,7 @@
     "optionated:less:compile": "lessc src/less/optionated.less css/optionated.css",
     "optionated:less:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
     "optionated:less:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "stylus": "yarn reseter:stylus && yarn optionated:stylus && yarn all:compress",
+    "stylus": "yarn reseter:stylus && yarn optionated:stylus",
     "reseter:stylus": "yarn reseter:stylus:compile && yarn reseter:stylus:prefix && yarn reseter:stylus:minify",
     "reseter:stylus:compile": "stylus src/stylus/reseter.styl -o css/reseter.css",
     "reseter:stylus:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
