chore: yarn -> npm

--- a/package.json
+++ b/package.json
@@ -35,10 +35,6 @@
     {
       "type": "kofi",
       "url": "https://ko-fi.com/krishdevdb"
-    },
-    {
-      "type": "liberapay",
-      "url": "https://ko-fi.com/krishdevdb"
     }
   ],
   "main": "css/reseter.min.css",
@@ -46,47 +42,36 @@
   "man": [],
   "directories": {
     "src": "src",
-    "dist": "dist"
+    "dist": "css"
   },
   "repository": "github:krishdevdb/reseter.css",
   "scripts": {
-    "sass": "yarn reseter:sass && yarn optionated:sass",
-    "reseter:sass": "yarn reseter:sass:compile && yarn reseter:sass:prefix && yarn reseter:sass:minify",
-    "reseter:sass:compile": "sass src/sass/reseter.sass css/reseter.css --no-source-map",
-    "reseter:sass:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "reseter:sass:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "optionated:sass": "yarn optionated:sass:compile && yarn optionated:sass:prefix && yarn optionated:sass:minify",
-    "optionated:sass:compile": "sass src/sass/optionated.sass css/optionated.css --no-source-map",
-    "optionated:sass:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
-    "optionated:sass:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "scss": "yarn reseter:scss && yarn optionated:scss",
-    "reseter:scss": "yarn reseter:scss:compile && yarn reseter:scss:prefix && yarn reseter:scss:minify",
-    "reseter:scss:compile": "sass src/scss/reseter.scss css/reseter.css --no-source-map",
-    "reseter:scss:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "reseter:scss:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "optionated:scss": "yarn optionated:scss:compile && yarn optionated:scss:prefix && yarn optionated:scss:minify",
-    "optionated:scss:compile": "sass src/scss/optionated.scss css/optionated.css --no-source-map",
-    "optionated:scss:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
-    "optionated:scss:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "less": "yarn reseter:less && yarn optionated:less",
-    "reseter:less": "yarn reseter:less:compile && yarn reseter:less:prefix && yarn reseter:less:minify",
-    "reseter:less:compile": "lessc src/less/reseter.less css/reseter.css",
-    "reseter:less:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "reseter:less:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "optionated:less": "yarn optionated:less:compile && yarn optionated:less:prefix && yarn optionated:less:minify",
-    "optionated:less:compile": "lessc src/less/optionated.less css/optionated.css",
-    "optionated:less:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
-    "optionated:less:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "stylus": "yarn reseter:stylus && yarn optionated:stylus",
-    "reseter:stylus": "yarn reseter:stylus:compile && yarn reseter:stylus:prefix && yarn reseter:stylus:minify",
-    "reseter:stylus:compile": "stylus src/stylus/reseter.styl -o css/reseter.css",
-    "reseter:stylus:prefix": "postcss css/reseter.css -r --no-map -u autoprefixer",
-    "reseter:stylus:minify": "cleancss css/reseter.css -o css/reseter.min.css",
-    "optionated:stylus": "yarn optionated:stylus:compile && yarn optionated:stylus:prefix && yarn optionated:stylus:minify",
-    "optionated:stylus:compile": "stylus src/stylus/optionated.styl -o css/optionated.css",
-    "optionated:stylus:prefix": "postcss css/optionated.css -r --no-map -u autoprefixer",
-    "optionated:stylus:minify": "cleancss css/optionated.css -o css/optionated.min.css",
-    "all:compress": "bundlewatch --config .bundlewatch.config.js"
+    "sass": "npm run-script sass:main && npm run-script sass:opinionated && npm run-script sass:mini",
+    "sass:main": "sass src/sass/reseter.sass css/reseter.css --no-source-map",
+    "sass:opinionated": "sass src/sass/opinionated.sass css/opinionated.css --no-source-map",
+    "sass:mini": "sass src/sass/minireseter.sass css/minireseter.css --no-source-map",
+    "scss": "npm run-script scss:main && npm run-script scss:opinionated && npm run-script scss:mini",
+    "scss:main": "sass src/scss/reseter.scss css/reseter.css --no-source-map",
+    "scss:opinionated": "sass src/scss/opinionated.scss css/opinionated.css --no-source-map",
+    "scss:mini": "sass src/scss/minireseter.scss css/minireseter.css --no-source-map",
+    "less": "npm run-script less:main && npm run-script less:opinionated && npm run-script less:mini",
+    "less:main": "lessc src/less/reseter.less css/reseter.css",
+    "less:opinionated": "lessc src/less/opinionated.less css/opinionated.css",
+    "less:mini": "lessc src/less/minireseter.less css/minireseter.css",
+    "styl": "npm run-script styl:main && npm run-script styl:opinionated && npm run-script styl:mini",
+    "styl:main": "stylus src/stylus/reseter.styl -o css/reseter.css",
+    "styl:opinionated": "stylus src/stylus/opinionated.styl -o css/opinionated.css",
+    "styl:mini": "stylus src/stylus/minireseter.styl -o css/minireseter.css",
+    "compile": "npm run-script sass && npm run-script scss && npm run-script less && npm run-script styl",
+    "prefix": "npm run-script prefix:main && npm run-script prefix:opinionated && npm run-script prefix:mini",
+    "prefix:main": "postcss css/reseter.css -r --no-map -u autoprefixer",
+    "prefix:mini": "postcss css/minireseter.css -r --no-map -u autoprefixer",
+    "prefix:opinionated": "postcss css/opinionated.css -r --no-map -u autoprefixer",
+    "minify": "npm run-script minify:main && npm run-script minify:opinionated && npm run-script minify:mini",
+    "minify:main": "cleancss css/reseter.css -o css/reseter.min.css",
+    "minify:opinionated": "cleancss css/opinionated.css -o css/opinionated.min.css",
+    "minify:mini": "cleancss css/minireseter.css -o css/minireseter.min.css",
+    "compress": "bundlewatch --config .bundlewatch.config.js"
   },
   "config": {},
   "dependencies": {},
